ASoC: es8323: add proper left/right mixer controls via DAPM (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1707,6 +1707,7 @@
 	patches.kernel.org/6.17.8-319-iio-adc-imx93_adc-load-calibrated-values-even-.patch
 	patches.kernel.org/6.17.8-320-usb-gadget-f_ncm-Fix-MAC-assignment-NCM-ethern.patch
 	patches.kernel.org/6.17.8-321-ASoC-es8323-remove-DAC-enablement-write-from-e.patch
+	patches.kernel.org/6.17.8-322-ASoC-es8323-add-proper-left-right-mixer-contro.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
