drm/amd/display: Fix DVI-D/HDMI adapters (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1941,6 +1941,7 @@
 	patches.kernel.org/6.17.8-553-drm-amd-Avoid-evicting-resources-at-S5.patch
 	patches.kernel.org/6.17.8-554-drm-amd-display-Don-t-use-non-registered-VUPDA.patch
 	patches.kernel.org/6.17.8-555-drm-amd-display-Keep-PLL0-running-on-DCE-6.0-a.patch
+	patches.kernel.org/6.17.8-556-drm-amd-display-Fix-DVI-D-HDMI-adapters.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
