--- a/series.conf
+++ b/series.conf
@@ -1544,6 +1544,7 @@
 	patches.kernel.org/6.17.8-156-hwmon-sbtsi_temp-AMD-CPU-extended-temperature-.patch
 	patches.kernel.org/6.17.8-157-pinctrl-renesas-rzg2l-Add-suspend-resume-suppo.patch
 	patches.kernel.org/6.17.8-158-pinctrl-keembay-release-allocated-memory-in-de.patch
+	patches.kernel.org/6.17.8-159-power-supply-sbs-charger-Support-multiple-devi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
