--- a/series.conf
+++ b/series.conf
@@ -1805,6 +1805,7 @@
 	patches.kernel.org/6.17.8-417-drm-msm-dsi-phy-Toggle-back-buffer-resync-afte.patch
 	patches.kernel.org/6.17.8-418-drm-msm-dsi-phy_7nm-Fix-missing-initial-VCO-ra.patch
 	patches.kernel.org/6.17.8-419-drm-amdgpu-Allow-kfd-CRIU-with-no-buffer-objec.patch
+	patches.kernel.org/6.17.8-420-drm-xe-guc-Increase-GuC-crash-dump-buffer-size.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
