smb: client: fix potential cfid UAF in smb2_query_info_compound (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1410,6 +1410,7 @@
 	patches.kernel.org/6.17.8-022-ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
 	patches.kernel.org/6.17.8-023-ASoC-renesas-rz-ssi-Use-proper-dma_buffer_pos-.patch
 	patches.kernel.org/6.17.8-024-s390-pci-Restore-IRQ-unconditionally-for-the-z.patch
+	patches.kernel.org/6.17.8-025-smb-client-fix-potential-cfid-UAF-in-smb2_quer.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
