--- a/series.conf
+++ b/series.conf
@@ -1824,6 +1824,7 @@
 	patches.kernel.org/6.17.8-436-wifi-mac80211-Fix-6-GHz-Band-capabilities-elem.patch
 	patches.kernel.org/6.17.8-437-platform-x86-think-lmi-Add-extra-TC-BIOS-error.patch
 	patches.kernel.org/6.17.8-438-platform-x86-intel-uncore-freq-Present-unique-.patch
+	patches.kernel.org/6.17.8-439-ALSA-usb-audio-apply-quirk-for-MOONDROP-Quark2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
