ASoC: renesas: msiof: set SIFCTR register (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2027,6 +2027,7 @@
 	patches.kernel.org/6.17.8-639-ASoC-renesas-msiof-add-.symmetric_xxx-on-snd_s.patch
 	patches.kernel.org/6.17.8-640-ASoC-renesas-msiof-use-reset-controller.patch
 	patches.kernel.org/6.17.8-641-ASoC-renesas-msiof-tidyup-DMAC-stop-timing.patch
+	patches.kernel.org/6.17.8-642-ASoC-renesas-msiof-set-SIFCTR-register.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
