--- a/series.conf
+++ b/series.conf
@@ -1547,6 +1547,7 @@
 	patches.kernel.org/6.17.8-159-power-supply-sbs-charger-Support-multiple-devi.patch
 	patches.kernel.org/6.17.8-160-io_uring-rsrc-respect-submitter_task-in-io_reg.patch
 	patches.kernel.org/6.17.8-161-hwmon-sy7636a-add-alias.patch
+	patches.kernel.org/6.17.8-162-selftests-bpf-Fix-incorrect-array-size-calcula.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
