--- a/series.conf
+++ b/series.conf
@@ -1572,6 +1572,7 @@
 	patches.kernel.org/6.17.8-184-rust-kunit-allow-cfg-on-test-s.patch
 	patches.kernel.org/6.17.8-185-video-backlight-lp855x_bl-Set-correct-EPROM-st.patch
 	patches.kernel.org/6.17.8-186-i3c-dw-Add-shutdown-support-to-dw_i3c_master-d.patch
+	patches.kernel.org/6.17.8-187-io_uring-zcrx-check-all-niovs-filled-with-dma-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
