--- a/series.conf
+++ b/series.conf
@@ -1399,6 +1399,7 @@
 	patches.kernel.org/6.17.8-011-ACPI-fan-Use-platform-device-for-devres-relate.patch
 	patches.kernel.org/6.17.8-012-virtio-net-drop-the-multi-buffer-XDP-packet-in.patch
 	patches.kernel.org/6.17.8-013-batman-adv-Release-references-to-inactive-inte.patch
+	patches.kernel.org/6.17.8-014-fbdev-bitblit-bound-check-glyph-index-in-bit_p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
