i3c: dw: Add shutdown support to dw_i3c_master driver (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1571,6 +1571,7 @@
 	patches.kernel.org/6.17.8-183-i3c-mipi-i3c-hci-pci-Add-support-for-Intel-Wil.patch
 	patches.kernel.org/6.17.8-184-rust-kunit-allow-cfg-on-test-s.patch
 	patches.kernel.org/6.17.8-185-video-backlight-lp855x_bl-Set-correct-EPROM-st.patch
+	patches.kernel.org/6.17.8-186-i3c-dw-Add-shutdown-support-to-dw_i3c_master-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
