--- a/series.conf
+++ b/series.conf
@@ -2231,6 +2231,7 @@
 	patches.kernel.org/6.17.8-843-drm-amdgpu-userq-assign-an-error-code-for-inva.patch
 	patches.kernel.org/6.17.8-844-drm-msm-dpu-Fix-adjusted-mode-clock-check-for-.patch
 	patches.kernel.org/6.17.8-845-drm-amd-display-Reject-modes-with-too-high-pix.patch
+	patches.kernel.org/6.17.8-846-drm-amd-display-use-GFP_NOWAIT-for-allocation-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
