--- a/series.conf
+++ b/series.conf
@@ -1894,6 +1894,7 @@
 	patches.kernel.org/6.17.8-506-phy-rockchip-phy-rockchip-inno-csidphy-allow-w.patch
 	patches.kernel.org/6.17.8-507-drm-msm-registers-Generate-_HI-LO-builders-for.patch
 	patches.kernel.org/6.17.8-508-net-sh_eth-Disable-WoL-if-system-can-not-suspe.patch
+	patches.kernel.org/6.17.8-509-selftests-net-replace-sleeps-in-fcnal-test-wit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
