--- a/series.conf
+++ b/series.conf
@@ -2122,6 +2122,7 @@
 	patches.kernel.org/6.17.8-734-ceph-refactor-wake_up_bit-pattern-of-calling.patch
 	patches.kernel.org/6.17.8-735-ceph-fix-multifs-mds-auth-caps-issue.patch
 	patches.kernel.org/6.17.8-736-x86-uaccess-don-t-use-runtime-const-rewriting-.patch
+	patches.kernel.org/6.17.8-737-rust-condvar-fix-broken-intra-doc-link.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
