--- a/series.conf
+++ b/series.conf
@@ -1717,6 +1717,7 @@
 	patches.kernel.org/6.17.8-329-dm-error-mark-as-DM_TARGET_PASSES_INTEGRITY.patch
 	patches.kernel.org/6.17.8-330-char-misc-Make-misc_register-reentry-for-miscd.patch
 	patches.kernel.org/6.17.8-331-char-misc-Does-not-request-module-for-miscdevi.patch
+	patches.kernel.org/6.17.8-332-net-When-removing-nexthops-don-t-call-synchron.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
