--- a/series.conf
+++ b/series.conf
@@ -2172,6 +2172,7 @@
 	patches.kernel.org/6.17.8-784-bnxt_en-Fix-warning-in-bnxt_dl_reload_down.patch
 	patches.kernel.org/6.17.8-785-netpoll-Fix-deadlock-in-memory-allocation-unde.patch
 	patches.kernel.org/6.17.8-786-wifi-mac80211_hwsim-Limit-destroy_on_close-rad.patch
+	patches.kernel.org/6.17.8-787-io_uring-fix-types-for-region-size-calulation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
