--- a/series.conf
+++ b/series.conf
@@ -1411,6 +1411,7 @@
 	patches.kernel.org/6.17.8-023-ASoC-renesas-rz-ssi-Use-proper-dma_buffer_pos-.patch
 	patches.kernel.org/6.17.8-024-s390-pci-Restore-IRQ-unconditionally-for-the-z.patch
 	patches.kernel.org/6.17.8-025-smb-client-fix-potential-cfid-UAF-in-smb2_quer.patch
+	patches.kernel.org/6.17.8-026-x86-build-Disable-SSE4a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
