extcon: axp288: Fix wakeup source leaks on device unbind (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1744,6 +1744,7 @@
 	patches.kernel.org/6.17.8-356-scsi-pm80xx-Fix-race-condition-caused-by-stati.patch
 	patches.kernel.org/6.17.8-357-extcon-adc-jack-Fix-wakeup-source-leaks-on-dev.patch
 	patches.kernel.org/6.17.8-358-extcon-fsa9480-Fix-wakeup-source-leaks-on-devi.patch
+	patches.kernel.org/6.17.8-359-extcon-axp288-Fix-wakeup-source-leaks-on-devic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
