drm/amd/display: Move setup_stream_attribute (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1621,6 +1621,7 @@
 	patches.kernel.org/6.17.8-233-drm-amdgpu-add-range-check-for-RAS-bad-page-ad.patch
 	patches.kernel.org/6.17.8-234-drm-amdgpu-Check-vcn-sram-load-return-value.patch
 	patches.kernel.org/6.17.8-235-drm-amd-display-Remove-check-DPIA-HPD-status-f.patch
+	patches.kernel.org/6.17.8-236-drm-amd-display-Move-setup_stream_attribute.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
