--- a/series.conf
+++ b/series.conf
@@ -1798,6 +1798,7 @@
 	patches.kernel.org/6.17.8-410-drm-st7571-i2c-add-support-for-inverted-pixel-.patch
 	patches.kernel.org/6.17.8-411-ptp-Limit-time-setting-of-PTP-clocks.patch
 	patches.kernel.org/6.17.8-412-drm-xe-guc-Add-devm-release-action-to-safely-t.patch
+	patches.kernel.org/6.17.8-413-dmaengine-sh-setup_xref-error-handling.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
