--- a/series.conf
+++ b/series.conf
@@ -2053,6 +2053,7 @@
 	patches.kernel.org/6.17.8-665-Bluetooth-btusb-Add-new-VID-PID-13d3-3633-for-.patch
 	patches.kernel.org/6.17.8-666-Bluetooth-bcsp-receive-data-only-if-registered.patch
 	patches.kernel.org/6.17.8-667-net-stmmac-est-Drop-frames-causing-HLBS-error.patch
+	patches.kernel.org/6.17.8-668-exfat-limit-log-print-for-IO-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
