--- a/series.conf
+++ b/series.conf
@@ -2086,6 +2086,7 @@
 	patches.kernel.org/6.17.8-698-hyperv-Add-missing-field-to-hv_output_map_devi.patch
 	patches.kernel.org/6.17.8-699-um-Fix-help-message-for-ssl-non-raw.patch
 	patches.kernel.org/6.17.8-700-clk-sunxi-ng-sun6i-rtc-Add-A523-specifics.patch
+	patches.kernel.org/6.17.8-701-rtc-pcf2127-clear-minute-second-interrupt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
