--- a/series.conf
+++ b/series.conf
@@ -1955,6 +1955,7 @@
 	patches.kernel.org/6.17.8-567-drm-xe-guc-Return-an-error-code-if-the-GuC-loa.patch
 	patches.kernel.org/6.17.8-568-drm-amdgpu-reject-gang-submissions-under-SRIOV.patch
 	patches.kernel.org/6.17.8-569-selftests-Makefile-include-INSTALL_DEP_TARGETS.patch
+	patches.kernel.org/6.17.8-570-scsi-ufs-core-Disable-timestamp-functionality-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
