--- a/series.conf
+++ b/series.conf
@@ -1651,6 +1651,7 @@
 	patches.kernel.org/6.17.8-263-ASoC-mediatek-Use-SND_JACK_AVOUT-for-HDMI-DP-j.patch
 	patches.kernel.org/6.17.8-264-drm-amd-display-Reset-apply_eamless_boot_optim.patch
 	patches.kernel.org/6.17.8-265-drm-amdgpu-add-to-custom-amdgpu_drm_release-dr.patch
+	patches.kernel.org/6.17.8-266-drm-amd-display-Wait-until-OTG-enable-state-is.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
