drm/amdgpu: add support for cyan skillfish gpu_info (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1840,6 +1840,7 @@
 	patches.kernel.org/6.17.8-452-drm-amdgpu-Correct-info-field-of-bad-page-thre.patch
 	patches.kernel.org/6.17.8-453-drm-amd-add-more-cyan-skillfish-PCI-ids.patch
 	patches.kernel.org/6.17.8-454-drm-amdgpu-don-t-enable-SMU-on-cyan-skillfish.patch
+	patches.kernel.org/6.17.8-455-drm-amdgpu-add-support-for-cyan-skillfish-gpu_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
