--- a/series.conf
+++ b/series.conf
@@ -1740,6 +1740,7 @@
 	patches.kernel.org/6.17.8-352-scsi-mpi3mr-Fix-device-loss-during-enclosure-r.patch
 	patches.kernel.org/6.17.8-353-wifi-rtw89-coex-Limit-Wi-Fi-scan-slot-cost-to-.patch
 	patches.kernel.org/6.17.8-354-scsi-mpi3mr-Fix-I-O-failures-during-controller.patch
+	patches.kernel.org/6.17.8-355-scsi-mpi3mr-Fix-controller-init-failure-on-fau.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
