--- a/series.conf
+++ b/series.conf
@@ -2151,6 +2151,7 @@
 	patches.kernel.org/6.17.8-763-net-vlan-sync-VLAN-features-with-lower-device.patch
 	patches.kernel.org/6.17.8-764-netconsole-Acquire-su_mutex-before-navigating-.patch
 	patches.kernel.org/6.17.8-765-gpio-swnode-don-t-use-the-swnode-s-name-as-the.patch
+	patches.kernel.org/6.17.8-766-gpiolib-fix-invalid-pointer-access-in-debugfs.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
