--- a/series.conf
+++ b/series.conf
@@ -1646,6 +1646,7 @@
 	patches.kernel.org/6.17.8-258-accel-amdxdna-Unify-pm-and-rpm-suspend-and-res.patch
 	patches.kernel.org/6.17.8-259-drm-amdgpu-jpeg-Hold-pg_lock-before-jpeg-power.patch
 	patches.kernel.org/6.17.8-260-drm-xe-pf-Program-LMTT-directory-pointer-on-al.patch
+	patches.kernel.org/6.17.8-261-drm-nouveau-replace-snprintf-with-scnprintf-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
