RDMA/mana_ib: Drain send wrs of GSI QP (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1673,6 +1673,7 @@
 	patches.kernel.org/6.17.8-285-drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MOD.patch
 	patches.kernel.org/6.17.8-286-drm-tidss-Set-crtc-modesetting-parameters-with.patch
 	patches.kernel.org/6.17.8-287-drm-tidss-Remove-early-fb.patch
+	patches.kernel.org/6.17.8-288-RDMA-mana_ib-Drain-send-wrs-of-GSI-QP.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
