--- a/series.conf
+++ b/series.conf
@@ -2125,6 +2125,7 @@
 	patches.kernel.org/6.17.8-737-rust-condvar-fix-broken-intra-doc-link.patch
 	patches.kernel.org/6.17.8-738-rust-devres-fix-private-intra-doc-link.patch
 	patches.kernel.org/6.17.8-739-rust-kbuild-workaround-rustdoc-doctests-modifi.patch
+	patches.kernel.org/6.17.8-740-rust-kbuild-treat-build_error-and-rustdoc-as-k.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
