iommu/amd: Skip enabling command/event buffers for kdump (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1832,6 +1832,7 @@
 	patches.kernel.org/6.17.8-444-drm-gpusvm-fix-hmm_pfn_to_map_order-usage.patch
 	patches.kernel.org/6.17.8-445-drm-xe-improve-dma-resv-handling-for-backup-ob.patch
 	patches.kernel.org/6.17.8-446-iommu-amd-Add-support-to-remap-unmap-IOMMU-buf.patch
+	patches.kernel.org/6.17.8-447-iommu-amd-Skip-enabling-command-event-buffers-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
