--- a/series.conf
+++ b/series.conf
@@ -1444,6 +1444,7 @@
 	patches.kernel.org/6.17.8-056-usbnet-Prevents-free-active-kevent.patch
 	patches.kernel.org/6.17.8-057-Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_de.patch
 	patches.kernel.org/6.17.8-058-Bluetooth-ISO-Fix-BIS-connection-dst_type-hand.patch
+	patches.kernel.org/6.17.8-059-Bluetooth-btmtksdio-Add-pmctrl-handling-for-BT.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
