--- a/series.conf
+++ b/series.conf
@@ -1697,6 +1697,7 @@
 	patches.kernel.org/6.17.8-309-media-imon-make-send_packet-more-robust.patch
 	patches.kernel.org/6.17.8-310-drm-panthor-Serialize-GPU-cache-flush-operatio.patch
 	patches.kernel.org/6.17.8-311-HID-pidff-Use-direction-fix-only-for-condition.patch
+	patches.kernel.org/6.17.8-312-HID-pidff-PERMISSIVE_CONTROL-quirk-autodetecti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
