--- a/series.conf
+++ b/series.conf
@@ -1777,6 +1777,7 @@
 	patches.kernel.org/6.17.8-389-drm-amdgpu-Notify-pmfw-bad-page-threshold-exce.patch
 	patches.kernel.org/6.17.8-390-drm-amd-display-Increase-minimum-clock-for-TMD.patch
 	patches.kernel.org/6.17.8-391-drm-amdgpu-Avoid-jpeg-v5.0.1-poison-irq-call-t.patch
+	patches.kernel.org/6.17.8-392-drm-amd-display-incorrect-conditions-for-faili.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
