drm/amd/display: Fix dmub_cmd header alignment (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1623,6 +1623,7 @@
 	patches.kernel.org/6.17.8-235-drm-amd-display-Remove-check-DPIA-HPD-status-f.patch
 	patches.kernel.org/6.17.8-236-drm-amd-display-Move-setup_stream_attribute.patch
 	patches.kernel.org/6.17.8-237-drm-amd-display-Increase-AUX-Intra-Hop-Done-Ma.patch
+	patches.kernel.org/6.17.8-238-drm-amd-display-Fix-dmub_cmd-header-alignment.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
