ethernet: Extend device_get_mac_address() to use NVMEM (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1946,6 +1946,7 @@
 	patches.kernel.org/6.17.8-558-drm-amd-display-dml2-Guard-dml21_map_dc_state_.patch
 	patches.kernel.org/6.17.8-559-net-phy-clear-EEE-runtime-state-in-PHY_HALTED-.patch
 	patches.kernel.org/6.17.8-560-page_pool-always-add-GFP_NOWARN-for-ATOMIC-all.patch
+	patches.kernel.org/6.17.8-561-ethernet-Extend-device_get_mac_address-to-use-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
