ASoC: Intel: avs: Unprepare a stream when XRUN occurs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1435,6 +1435,7 @@
 	patches.kernel.org/6.17.8-047-nvmet-auth-update-sc_c-in-host-response.patch
 	patches.kernel.org/6.17.8-048-crypto-s390-phmac-Do-not-modify-the-req-nbytes.patch
 	patches.kernel.org/6.17.8-049-crypto-aspeed-fix-double-free-caused-by-devm.patch
+	patches.kernel.org/6.17.8-050-ASoC-Intel-avs-Unprepare-a-stream-when-XRUN-oc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
