--- a/series.conf
+++ b/series.conf
@@ -1421,6 +1421,7 @@
 	patches.kernel.org/6.17.8-033-drm-msm-Fix-GEM-free-for-imported-dma-bufs.patch
 	patches.kernel.org/6.17.8-034-drm-msm-a6xx-Fix-GMU-firmware-parser.patch
 	patches.kernel.org/6.17.8-035-drm-msm-make-sure-last_fence-is-always-updated.patch
+	patches.kernel.org/6.17.8-036-ALSA-usb-audio-fix-control-pipe-direction.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
