--- a/series.conf
+++ b/series.conf
@@ -1606,6 +1606,7 @@
 	patches.kernel.org/6.17.8-218-mfd-stmpe-Remove-IRQ-domain-upon-removal.patch
 	patches.kernel.org/6.17.8-219-mfd-stmpe-i2c-Add-missing-MODULE_LICENSE.patch
 	patches.kernel.org/6.17.8-220-mfd-qnap-mcu-Handle-errors-returned-from-qnap_.patch
+	patches.kernel.org/6.17.8-221-mfd-qnap-mcu-Include-linux-types.h-in-qnap-mcu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
