--- a/series.conf
+++ b/series.conf
@@ -1726,6 +1726,7 @@
 	patches.kernel.org/6.17.8-338-bnxt_en-Add-Hyper-V-VF-ID.patch
 	patches.kernel.org/6.17.8-339-tty-serial-Modify-the-use-of-dev_err_probe.patch
 	patches.kernel.org/6.17.8-340-ALSA-usb-audio-Add-validation-of-UAC2-UAC3-eff.patch
+	patches.kernel.org/6.17.8-341-Octeontx2-af-Broadcast-XON-on-all-channels.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
