--- a/series.conf
+++ b/series.conf
@@ -1590,6 +1590,7 @@
 	patches.kernel.org/6.17.8-202-blk-cgroup-fix-possible-deadlock-while-configu.patch
 	patches.kernel.org/6.17.8-203-riscv-bpf-Fix-uninitialized-symbol-retval_off.patch
 	patches.kernel.org/6.17.8-204-bpf-Clear-pfmemalloc-flag-when-freeing-all-fra.patch
+	patches.kernel.org/6.17.8-205-selftests-drv-net-Pull-data-before-parsing-hea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
