clk: samsung: exynos990: Add missing USB clock registers to HSI0 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2080,6 +2080,7 @@
 	patches.kernel.org/6.17.8-692-clk-qcom-gcc-ipq6018-rework-nss_port5-clock-to.patch
 	patches.kernel.org/6.17.8-693-clk-thead-th1520-ap-set-all-AXI-clocks-to-CLK_.patch
 	patches.kernel.org/6.17.8-694-clk-renesas-rzv2h-Re-assert-reset-on-deassert-.patch
+	patches.kernel.org/6.17.8-695-clk-samsung-exynos990-Add-missing-USB-clock-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
