--- a/series.conf
+++ b/series.conf
@@ -2024,6 +2024,7 @@
 	patches.kernel.org/6.17.8-636-accel-habanalabs-return-ENOMEM-if-less-than-re.patch
 	patches.kernel.org/6.17.8-637-accel-habanalabs-gaudi2-read-preboot-status-af.patch
 	patches.kernel.org/6.17.8-638-accel-habanalabs-support-mapping-cb-with-vmall.patch
+	patches.kernel.org/6.17.8-639-ASoC-renesas-msiof-add-.symmetric_xxx-on-snd_s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
