--- a/series.conf
+++ b/series.conf
@@ -1500,6 +1500,7 @@
 	patches.kernel.org/6.17.8-112-cpuidle-governors-menu-Rearrange-main-loop-in-.patch
 	patches.kernel.org/6.17.8-113-cpuidle-governors-menu-Select-polling-state-in.patch
 	patches.kernel.org/6.17.8-114-PM-hibernate-Combine-return-paths-in-power_dow.patch
+	patches.kernel.org/6.17.8-115-PM-sleep-Allow-pm_restrict_gfp_mask-stacking.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
