fs: ext4: change GFP_KERNEL to GFP_NOFS to avoid deadlock (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2028,6 +2028,7 @@
 	patches.kernel.org/6.17.8-640-ASoC-renesas-msiof-use-reset-controller.patch
 	patches.kernel.org/6.17.8-641-ASoC-renesas-msiof-tidyup-DMAC-stop-timing.patch
 	patches.kernel.org/6.17.8-642-ASoC-renesas-msiof-set-SIFCTR-register.patch
+	patches.kernel.org/6.17.8-643-fs-ext4-change-GFP_KERNEL-to-GFP_NOFS-to-avoid.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
