net: mana: Reduce waiting time if HWC not responding (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1917,6 +1917,7 @@
 	patches.kernel.org/6.17.8-529-crypto-ccp-Fix-incorrect-payload-size-calculat.patch
 	patches.kernel.org/6.17.8-530-crypto-caam-double-the-entropy-delay-interval-.patch
 	patches.kernel.org/6.17.8-531-can-rcar_canfd-Update-bit-rate-constants-for-R.patch
+	patches.kernel.org/6.17.8-532-net-mana-Reduce-waiting-time-if-HWC-not-respon.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
