--- a/series.conf
+++ b/series.conf
@@ -2038,6 +2038,7 @@
 	patches.kernel.org/6.17.8-650-ASoC-tlv320aic3x-Fix-class-D-initialization-fo.patch
 	patches.kernel.org/6.17.8-651-ACPI-scan-Update-honor-list-for-RPMI-System-MS.patch
 	patches.kernel.org/6.17.8-652-platform-x86-x86-android-tablets-Stop-using-EP.patch
+	patches.kernel.org/6.17.8-653-vfio-pci-Fix-INTx-handling-on-legacy-non-PCI-2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
