drm/bridge: cdns-dsi: Fix REG_WAKEUP_TIME value (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1669,6 +1669,7 @@
 	patches.kernel.org/6.17.8-281-media-pci-ivtv-Don-t-create-fake-v4l2_fh.patch
 	patches.kernel.org/6.17.8-282-media-amphion-Delete-v4l2_fh-synchronously-in-.patch
 	patches.kernel.org/6.17.8-283-drm-tidss-Use-the-crtc_-timings-when-programmi.patch
+	patches.kernel.org/6.17.8-284-drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
