--- a/series.conf
+++ b/series.conf
@@ -2187,6 +2187,7 @@
 	patches.kernel.org/6.17.8-799-tracing-Fix-memory-leaks-in-create_field_var.patch
 	patches.kernel.org/6.17.8-800-drm-amd-display-Enable-mst-when-it-s-detected-.patch
 	patches.kernel.org/6.17.8-801-wifi-cfg80211-add-an-hrtimer-based-delayed-wor.patch
+	patches.kernel.org/6.17.8-802-wifi-mac80211-use-wiphy_hrtimer_work-for-ml_re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
