--- a/series.conf
+++ b/series.conf
@@ -1620,6 +1620,7 @@
 	patches.kernel.org/6.17.8-232-drm-amd-display-ensure-committing-streams-is-s.patch
 	patches.kernel.org/6.17.8-233-drm-amdgpu-add-range-check-for-RAS-bad-page-ad.patch
 	patches.kernel.org/6.17.8-234-drm-amdgpu-Check-vcn-sram-load-return-value.patch
+	patches.kernel.org/6.17.8-235-drm-amd-display-Remove-check-DPIA-HPD-status-f.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
