--- a/series.conf
+++ b/series.conf
@@ -1644,6 +1644,7 @@
 	patches.kernel.org/6.17.8-256-drm-amd-pm-Use-cached-metrics-data-on-aldebara.patch
 	patches.kernel.org/6.17.8-257-drm-amd-pm-Use-cached-metrics-data-on-arcturus.patch
 	patches.kernel.org/6.17.8-258-accel-amdxdna-Unify-pm-and-rpm-suspend-and-res.patch
+	patches.kernel.org/6.17.8-259-drm-amdgpu-jpeg-Hold-pg_lock-before-jpeg-power.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
