--- a/series.conf
+++ b/series.conf
@@ -1719,6 +1719,7 @@
 	patches.kernel.org/6.17.8-331-char-misc-Does-not-request-module-for-miscdevi.patch
 	patches.kernel.org/6.17.8-332-net-When-removing-nexthops-don-t-call-synchron.patch
 	patches.kernel.org/6.17.8-333-net-stmmac-Correctly-handle-Rx-checksum-offloa.patch
+	patches.kernel.org/6.17.8-334-net-Call-trace_sock_exceed_buf_limit-for-memcg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
