drm/panel: ilitek-ili9881c: turn off power-supply when init fails (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1729,6 +1729,7 @@
 	patches.kernel.org/6.17.8-341-Octeontx2-af-Broadcast-XON-on-all-channels.patch
 	patches.kernel.org/6.17.8-342-idpf-do-not-linearize-big-TSO-packets.patch
 	patches.kernel.org/6.17.8-343-drm-xe-pcode-Initialize-data0-for-pcode-read-r.patch
+	patches.kernel.org/6.17.8-344-drm-panel-ilitek-ili9881c-turn-off-power-suppl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
