io_uring/rsrc: respect submitter_task in io_register_clone_buffers() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1545,6 +1545,7 @@
 	patches.kernel.org/6.17.8-157-pinctrl-renesas-rzg2l-Add-suspend-resume-suppo.patch
 	patches.kernel.org/6.17.8-158-pinctrl-keembay-release-allocated-memory-in-de.patch
 	patches.kernel.org/6.17.8-159-power-supply-sbs-charger-Support-multiple-devi.patch
+	patches.kernel.org/6.17.8-160-io_uring-rsrc-respect-submitter_task-in-io_reg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
