--- a/series.conf
+++ b/series.conf
@@ -1402,6 +1402,7 @@
 	patches.kernel.org/6.17.8-014-fbdev-bitblit-bound-check-glyph-index-in-bit_p.patch
 	patches.kernel.org/6.17.8-015-Bluetooth-rfcomm-fix-modem-control-handling.patch
 	patches.kernel.org/6.17.8-016-net-phy-dp83867-Disable-EEE-support-as-not-imp.patch
+	patches.kernel.org/6.17.8-017-wifi-brcmfmac-fix-crash-while-sending-Action-F.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
