--- a/series.conf
+++ b/series.conf
@@ -1456,6 +1456,7 @@
 	patches.kernel.org/6.17.8-068-ALSA-usb-audio-add-mono-main-switch-to-Presonu.patch
 	patches.kernel.org/6.17.8-069-ALSA-usb-audio-don-t-log-messages-meant-for-18.patch
 	patches.kernel.org/6.17.8-070-ACPI-MRRM-Check-revision-of-MRRM-table.patch
+	patches.kernel.org/6.17.8-071-drm-etnaviv-fix-flush-sequence-logic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
