--- a/series.conf
+++ b/series.conf
@@ -1482,6 +1482,7 @@
 	patches.kernel.org/6.17.8-094-regmap-irq-Correct-documentation-of-wake_inver.patch
 	patches.kernel.org/6.17.8-095-s390-pci-Avoid-deadlock-between-PCI-error-reco.patch
 	patches.kernel.org/6.17.8-096-s390-Disable-ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMA.patch
+	patches.kernel.org/6.17.8-097-s390-mm-Fix-memory-leak-in-add_marker-when-kvr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
