net: ionic: map SKB after pseudo-header checksum prep (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2162,6 +2162,7 @@
 	patches.kernel.org/6.17.8-774-sctp-Prevent-TOCTOU-out-of-bounds-write.patch
 	patches.kernel.org/6.17.8-775-sctp-Hold-sock-lock-while-iterating-over-addre.patch
 	patches.kernel.org/6.17.8-776-net-ionic-add-dma_wmb-before-ringing-TX-doorbe.patch
+	patches.kernel.org/6.17.8-777-net-ionic-map-SKB-after-pseudo-header-checksum.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
