drm/amd/display: Fix black screen with HDMI outputs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2232,6 +2232,7 @@
 	patches.kernel.org/6.17.8-844-drm-msm-dpu-Fix-adjusted-mode-clock-check-for-.patch
 	patches.kernel.org/6.17.8-845-drm-amd-display-Reject-modes-with-too-high-pix.patch
 	patches.kernel.org/6.17.8-846-drm-amd-display-use-GFP_NOWAIT-for-allocation-.patch
+	patches.kernel.org/6.17.8-847-drm-amd-display-Fix-black-screen-with-HDMI-out.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
