--- a/series.conf
+++ b/series.conf
@@ -2116,6 +2116,7 @@
 	patches.kernel.org/6.17.8-728-ASoC-meson-aiu-encoder-i2s-fix-bit-clock-polar.patch
 	patches.kernel.org/6.17.8-729-ASoC-rt722-add-settings-for-rt722VB.patch
 	patches.kernel.org/6.17.8-730-drm-amdkfd-Fix-mmap-write-lock-not-release.patch
+	patches.kernel.org/6.17.8-731-drm-amdgpu-Report-individual-reset-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
