--- a/series.conf
+++ b/series.conf
@@ -1491,6 +1491,7 @@
 	patches.kernel.org/6.17.8-103-drm-mediatek-Fix-device-use-after-free-on-unbi.patch
 	patches.kernel.org/6.17.8-104-drm-i915-dmc-Clear-HRR-EVT_CTL-HTP-to-zero-on-.patch
 	patches.kernel.org/6.17.8-105-drm-ast-Clear-preserved-bits-from-register-out.patch
+	patches.kernel.org/6.17.8-106-drm-amd-Check-that-VPE-has-reached-DPM0-in-idl.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
