--- a/series.conf
+++ b/series.conf
@@ -2005,6 +2005,7 @@
 	patches.kernel.org/6.17.8-617-bng_en-make-bnge_alloc_ring-self-unwind-on-fai.patch
 	patches.kernel.org/6.17.8-618-ALSA-usb-audio-don-t-apply-interface-quirk-to-.patch
 	patches.kernel.org/6.17.8-619-tcp-Update-bind-bucket-state-on-port-release.patch
+	patches.kernel.org/6.17.8-620-ovl-make-sure-that-ovl_create_real-returns-a-h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
