bpf: Use tnums for JEQ/JNE is_branch_taken logic (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1515,6 +1515,7 @@
 	patches.kernel.org/6.17.8-127-mmc-host-renesas_sdhi-Fix-the-actual-clock.patch
 	patches.kernel.org/6.17.8-128-memstick-Add-timeout-to-prevent-indefinite-wai.patch
 	patches.kernel.org/6.17.8-129-cpufreq-ti-Add-support-for-AM62D2.patch
+	patches.kernel.org/6.17.8-130-bpf-Use-tnums-for-JEQ-JNE-is_branch_taken-logi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
