eth: fbnic: Reset hw stats upon PCI error (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1765,6 +1765,7 @@
 	patches.kernel.org/6.17.8-377-drm-amdgpu-vpe-cancel-delayed-work-in-hw_fini.patch
 	patches.kernel.org/6.17.8-378-drm-xe-Cancel-pending-TLB-inval-workers-on-tea.patch
 	patches.kernel.org/6.17.8-379-net-Prevent-RPS-table-overwrite-of-active-flow.patch
+	patches.kernel.org/6.17.8-380-eth-fbnic-Reset-hw-stats-upon-PCI-error.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
