pinctrl: single: fix bias pull up/down handling in pin_config_set (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1511,6 +1511,7 @@
 	patches.kernel.org/6.17.8-123-soc-ti-pruss-don-t-use-pK-through-printk.patch
 	patches.kernel.org/6.17.8-124-bpf-Don-t-use-pK-through-printk.patch
 	patches.kernel.org/6.17.8-125-mmc-sdhci-Disable-SD-card-clock-before-changin.patch
+	patches.kernel.org/6.17.8-126-pinctrl-single-fix-bias-pull-up-down-handling-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
