drm/mediatek: Fix device use-after-free on unbind (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1488,6 +1488,7 @@
 	patches.kernel.org/6.17.8-100-drm-sched-avoid-killing-parent-entity-on-child.patch
 	patches.kernel.org/6.17.8-101-drm-sched-Fix-race-in-drm_sched_entity_select_.patch
 	patches.kernel.org/6.17.8-102-drm-nouveau-Fix-race-in-nouveau_sched_fini.patch
+	patches.kernel.org/6.17.8-103-drm-mediatek-Fix-device-use-after-free-on-unbi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
