--- a/series.conf
+++ b/series.conf
@@ -2124,6 +2124,7 @@
 	patches.kernel.org/6.17.8-736-x86-uaccess-don-t-use-runtime-const-rewriting-.patch
 	patches.kernel.org/6.17.8-737-rust-condvar-fix-broken-intra-doc-link.patch
 	patches.kernel.org/6.17.8-738-rust-devres-fix-private-intra-doc-link.patch
+	patches.kernel.org/6.17.8-739-rust-kbuild-workaround-rustdoc-doctests-modifi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
