--- a/series.conf
+++ b/series.conf
@@ -1420,6 +1420,7 @@
 	patches.kernel.org/6.17.8-032-wifi-ath11k-avoid-bit-operation-on-key-flags.patch
 	patches.kernel.org/6.17.8-033-drm-msm-Fix-GEM-free-for-imported-dma-bufs.patch
 	patches.kernel.org/6.17.8-034-drm-msm-a6xx-Fix-GMU-firmware-parser.patch
+	patches.kernel.org/6.17.8-035-drm-msm-make-sure-last_fence-is-always-updated.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
