--- a/series.conf
+++ b/series.conf
@@ -1734,6 +1734,7 @@
 	patches.kernel.org/6.17.8-346-rds-Fix-endianness-annotation-for-RDS_MPATH_HA.patch
 	patches.kernel.org/6.17.8-347-net-wangxun-limit-tx_max_coalesced_frames_irq.patch
 	patches.kernel.org/6.17.8-348-iio-imu-bmi270-Match-PNP-ID-found-on-newer-GPD.patch
+	patches.kernel.org/6.17.8-349-media-ipu6-isys-Set-embedded-data-type-correct.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
