--- a/series.conf
+++ b/series.conf
@@ -2101,6 +2101,7 @@
 	patches.kernel.org/6.17.8-713-cpufreq-tegra186-Initialize-all-cores-to-max-f.patch
 	patches.kernel.org/6.17.8-714-9p-sysfs_init-don-t-hardcode-error-to-ENOMEM.patch
 	patches.kernel.org/6.17.8-715-scsi-ufs-core-Include-UTP-error-in-INT_FATAL_E.patch
+	patches.kernel.org/6.17.8-716-fbdev-core-Fix-ubsan-warning-in-pixel_to_pat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
