--- a/series.conf
+++ b/series.conf
@@ -1769,6 +1769,7 @@
 	patches.kernel.org/6.17.8-381-wifi-iwlwifi-mld-trigger-mlo-scan-only-when-no.patch
 	patches.kernel.org/6.17.8-382-platform-x86-intel-uncore-freq-Fix-warning-in-.patch
 	patches.kernel.org/6.17.8-383-drm-msm-dpu-Filter-modes-based-on-adjusted-mod.patch
+	patches.kernel.org/6.17.8-384-drm-msm-Use-of_reserved_mem_region_to_resource.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
