--- a/series.conf
+++ b/series.conf
@@ -1643,6 +1643,7 @@
 	patches.kernel.org/6.17.8-255-drm-amd-display-update-dpp-disp-clock-from-smu.patch
 	patches.kernel.org/6.17.8-256-drm-amd-pm-Use-cached-metrics-data-on-aldebara.patch
 	patches.kernel.org/6.17.8-257-drm-amd-pm-Use-cached-metrics-data-on-arcturus.patch
+	patches.kernel.org/6.17.8-258-accel-amdxdna-Unify-pm-and-rpm-suspend-and-res.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
