--- a/series.conf
+++ b/series.conf
@@ -1961,6 +1961,7 @@
 	patches.kernel.org/6.17.8-573-scsi-lpfc-Check-return-status-of-lpfc_reset_fl.patch
 	patches.kernel.org/6.17.8-574-scsi-lpfc-Remove-ndlp-kref-decrement-clause-fo.patch
 	patches.kernel.org/6.17.8-575-scsi-lpfc-Define-size-of-debugfs-entry-for-xri.patch
+	patches.kernel.org/6.17.8-576-scsi-lpfc-Ensure-PLOGI_ACC-is-sent-prior-to-PR.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
