--- a/series.conf
+++ b/series.conf
@@ -1983,6 +1983,7 @@
 	patches.kernel.org/6.17.8-595-net-ethernet-microchip-sparx5-make-it-selectab.patch
 	patches.kernel.org/6.17.8-596-bus-mhi-core-Improve-mhi_sync_power_up-handlin.patch
 	patches.kernel.org/6.17.8-597-iommu-vt-d-Replace-snprintf-with-scnprintf-in-.patch
+	patches.kernel.org/6.17.8-598-wifi-ath10k-Fix-connection-after-GTK-rekeying.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
