--- a/series.conf
+++ b/series.conf
@@ -2233,6 +2233,7 @@
 	patches.kernel.org/6.17.8-845-drm-amd-display-Reject-modes-with-too-high-pix.patch
 	patches.kernel.org/6.17.8-846-drm-amd-display-use-GFP_NOWAIT-for-allocation-.patch
 	patches.kernel.org/6.17.8-847-drm-amd-display-Fix-black-screen-with-HDMI-out.patch
+	patches.kernel.org/6.17.8-848-selftests-drv-net-Reload-pkt-pointer-after-cal.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
