tools: lib: thermal: don't preserve owner in install (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2105,6 +2105,7 @@
 	patches.kernel.org/6.17.8-717-ACPI-property-Return-present-device-nodes-only.patch
 	patches.kernel.org/6.17.8-718-LoongArch-Handle-new-atomic-instructions-for-p.patch
 	patches.kernel.org/6.17.8-719-tools-bitmap-Add-missing-asm-generic-bitsperlo.patch
+	patches.kernel.org/6.17.8-720-tools-lib-thermal-don-t-preserve-owner-in-inst.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
