--- a/series.conf
+++ b/series.conf
@@ -1986,6 +1986,7 @@
 	patches.kernel.org/6.17.8-598-wifi-ath10k-Fix-connection-after-GTK-rekeying.patch
 	patches.kernel.org/6.17.8-599-iommu-vt-d-Remove-LPIG-from-page-group-respons.patch
 	patches.kernel.org/6.17.8-600-wifi-mac80211-Get-the-correct-interface-for-no.patch
+	patches.kernel.org/6.17.8-601-wifi-mac80211-Track-NAN-interface-start-stop.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
