--- a/series.conf
+++ b/series.conf
@@ -1425,6 +1425,7 @@
 	patches.kernel.org/6.17.8-037-wifi-iwlwifi-fix-potential-use-after-free-in-i.patch
 	patches.kernel.org/6.17.8-038-ASoC-cs-amp-lib-test-Fix-missing-include-of-ku.patch
 	patches.kernel.org/6.17.8-039-wifi-mac80211-reset-FILS-discovery-and-unsol-p.patch
+	patches.kernel.org/6.17.8-040-wifi-mac80211-fix-key-tailroom-accounting-leak.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
