--- a/series.conf
+++ b/series.conf
@@ -1397,6 +1397,7 @@
 	patches.kernel.org/6.17.8-009-ACPI-video-Fix-use-after-free-in-acpi_video_sw.patch
 	patches.kernel.org/6.17.8-010-ACPI-button-Call-input_free_device-on-failing-.patch
 	patches.kernel.org/6.17.8-011-ACPI-fan-Use-platform-device-for-devres-relate.patch
+	patches.kernel.org/6.17.8-012-virtio-net-drop-the-multi-buffer-XDP-packet-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
