--- a/series.conf
+++ b/series.conf
@@ -1671,6 +1671,7 @@
 	patches.kernel.org/6.17.8-283-drm-tidss-Use-the-crtc_-timings-when-programmi.patch
 	patches.kernel.org/6.17.8-284-drm-bridge-cdns-dsi-Fix-REG_WAKEUP_TIME-value.patch
 	patches.kernel.org/6.17.8-285-drm-bridge-cdns-dsi-Don-t-fail-on-MIPI_DSI_MOD.patch
+	patches.kernel.org/6.17.8-286-drm-tidss-Set-crtc-modesetting-parameters-with.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
