bnxt_en: Shutdown FW DMA in bnxt_shutdown() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2165,6 +2165,7 @@
 	patches.kernel.org/6.17.8-777-net-ionic-map-SKB-after-pseudo-header-checksum.patch
 	patches.kernel.org/6.17.8-778-octeontx2-pf-Fix-devm_kcalloc-error-checking.patch
 	patches.kernel.org/6.17.8-779-net-usb-qmi_wwan-initialize-MAC-header-offset-.patch
+	patches.kernel.org/6.17.8-780-bnxt_en-Shutdown-FW-DMA-in-bnxt_shutdown.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
