--- a/series.conf
+++ b/series.conf
@@ -1987,6 +1987,7 @@
 	patches.kernel.org/6.17.8-599-iommu-vt-d-Remove-LPIG-from-page-group-respons.patch
 	patches.kernel.org/6.17.8-600-wifi-mac80211-Get-the-correct-interface-for-no.patch
 	patches.kernel.org/6.17.8-601-wifi-mac80211-Track-NAN-interface-start-stop.patch
+	patches.kernel.org/6.17.8-602-net-intel-fm10k-Fix-parameter-idx-set-but-not-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
