--- a/series.conf
+++ b/series.conf
@@ -1660,6 +1660,7 @@
 	patches.kernel.org/6.17.8-272-drm-panel-edp-Add-SHP-LQ134Z1-panel-for-Dell-X.patch
 	patches.kernel.org/6.17.8-273-selftests-net-Replace-non-standard-__WORDSIZE-.patch
 	patches.kernel.org/6.17.8-274-selftests-net-Ensure-assert-triggers-in-psock_.patch
+	patches.kernel.org/6.17.8-275-wifi-rtw89-print-just-once-for-unknown-C2H-eve.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
