--- a/series.conf
+++ b/series.conf
@@ -1510,6 +1510,7 @@
 	patches.kernel.org/6.17.8-122-spi-spi-qpic-snand-handle-use_ecc-parameter-of.patch
 	patches.kernel.org/6.17.8-123-soc-ti-pruss-don-t-use-pK-through-printk.patch
 	patches.kernel.org/6.17.8-124-bpf-Don-t-use-pK-through-printk.patch
+	patches.kernel.org/6.17.8-125-mmc-sdhci-Disable-SD-card-clock-before-changin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
