drm/amd/display: Add fallback path for YCBCR422 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2065,6 +2065,7 @@
 	patches.kernel.org/6.17.8-677-smb-client-transport-avoid-reconnects-triggere.patch
 	patches.kernel.org/6.17.8-678-ima-don-t-clear-IMA_DIGSIG-flag-when-setting-o.patch
 	patches.kernel.org/6.17.8-679-usb-xhci-pci-Fix-USB2-only-root-hub-registrati.patch
+	patches.kernel.org/6.17.8-680-drm-amd-display-Add-fallback-path-for-YCBCR422.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
