--- a/series.conf
+++ b/series.conf
@@ -1533,6 +1533,7 @@
 	patches.kernel.org/6.17.8-145-selftests-bpf-Upon-failures-exit-with-code-1-i.patch
 	patches.kernel.org/6.17.8-146-irqchip-gic-v2m-Handle-Multiple-MSI-base-IRQ-A.patch
 	patches.kernel.org/6.17.8-147-ACPI-PRM-Skip-handlers-with-NULL-handler_addre.patch
+	patches.kernel.org/6.17.8-148-ACPI-resource-Skip-IRQ-override-on-ASUS-Vivobo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
