wifi: mac80211_hwsim: Limit destroy_on_close radio removal to netgroup (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2171,6 +2171,7 @@
 	patches.kernel.org/6.17.8-783-bnxt_en-Always-provide-max-entry-and-entry-siz.patch
 	patches.kernel.org/6.17.8-784-bnxt_en-Fix-warning-in-bnxt_dl_reload_down.patch
 	patches.kernel.org/6.17.8-785-netpoll-Fix-deadlock-in-memory-allocation-unde.patch
+	patches.kernel.org/6.17.8-786-wifi-mac80211_hwsim-Limit-destroy_on_close-rad.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
