drm/amd/display: Fix for test crash due to power gating (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2010,6 +2010,7 @@
 	patches.kernel.org/6.17.8-622-drm-amd-display-Add-AVI-infoframe-copy-in-copy.patch
 	patches.kernel.org/6.17.8-623-drm-amd-display-Add-fast-sync-field-in-ultra-s.patch
 	patches.kernel.org/6.17.8-624-drm-amd-display-Init-dispclk-from-bootup-clock.patch
+	patches.kernel.org/6.17.8-625-drm-amd-display-Fix-for-test-crash-due-to-powe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
