--- a/series.conf
+++ b/series.conf
@@ -1537,6 +1537,7 @@
 	patches.kernel.org/6.17.8-149-ACPI-scan-Add-Intel-CVS-ACPI-HIDs-to-acpi_igno.patch
 	patches.kernel.org/6.17.8-150-thermal-gov_step_wise-Allow-cooling-level-to-b.patch
 	patches.kernel.org/6.17.8-151-thermal-intel-selftests-workload_hint-Mask-uns.patch
+	patches.kernel.org/6.17.8-152-power-supply-qcom_battmgr-add-OOI-chemistry.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
