drm/amdgpu: Avoid rma causes GPU duplicate reset (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1630,6 +1630,7 @@
 	patches.kernel.org/6.17.8-242-drm-xe-pf-Don-t-resume-device-from-restart-wor.patch
 	patches.kernel.org/6.17.8-243-drm-amdgpu-Fix-build-error-when-CONFIG_SUSPEND.patch
 	patches.kernel.org/6.17.8-244-drm-amdgpu-Update-IPID-value-for-bad-page-thre.patch
+	patches.kernel.org/6.17.8-245-drm-amdgpu-Avoid-rma-causes-GPU-duplicate-rese.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
