--- a/series.conf
+++ b/series.conf
@@ -1748,6 +1748,7 @@
 	patches.kernel.org/6.17.8-360-drm-xe-Set-GT-as-wedged-before-sending-wedged-.patch
 	patches.kernel.org/6.17.8-361-remoteproc-wkup_m3-Use-devm_pm_runtime_enable-.patch
 	patches.kernel.org/6.17.8-362-drm-xe-wcl-Extend-L3bank-mask-workaround.patch
+	patches.kernel.org/6.17.8-363-net-phy-fixed_phy-let-fixed_phy_unregister-fre.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
