--- a/series.conf
+++ b/series.conf
@@ -2090,6 +2090,7 @@
 	patches.kernel.org/6.17.8-702-ARM-at91-pm-save-and-restore-ACR-during-PLL-di.patch
 	patches.kernel.org/6.17.8-703-clk-at91-add-ACR-in-all-PLL-settings.patch
 	patches.kernel.org/6.17.8-704-clk-at91-sam9x7-Add-peripheral-clock-id-for-pm.patch
+	patches.kernel.org/6.17.8-705-clk-at91-clk-master-Add-check-for-divide-by-3.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
