--- a/series.conf
+++ b/series.conf
@@ -1586,6 +1586,7 @@
 	patches.kernel.org/6.17.8-198-ACPI-SPCR-Support-Precise-Baud-Rate-field.patch
 	patches.kernel.org/6.17.8-199-clocksource-drivers-vf-pit-Replace-raw_readl-w.patch
 	patches.kernel.org/6.17.8-200-clocksource-drivers-timer-rtl-otto-Work-around.patch
+	patches.kernel.org/6.17.8-201-clocksource-drivers-timer-rtl-otto-Do-not-inte.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
