--- a/series.conf
+++ b/series.conf
@@ -1574,6 +1574,7 @@
 	patches.kernel.org/6.17.8-186-i3c-dw-Add-shutdown-support-to-dw_i3c_master-d.patch
 	patches.kernel.org/6.17.8-187-io_uring-zcrx-check-all-niovs-filled-with-dma-.patch
 	patches.kernel.org/6.17.8-188-tools-cpupower-fix-error-return-value-in-cpupo.patch
+	patches.kernel.org/6.17.8-189-io_uring-zcrx-account-niov-arrays-to-cgroup.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
