--- a/series.conf
+++ b/series.conf
@@ -2113,6 +2113,7 @@
 	patches.kernel.org/6.17.8-725-rtc-pcf2127-fix-watchdog-interrupt-mask-on-pcf.patch
 	patches.kernel.org/6.17.8-726-net-wwan-t7xx-add-support-for-HP-DRMR-H01.patch
 	patches.kernel.org/6.17.8-727-kbuild-uapi-Strip-comments-before-size-type-ch.patch
+	patches.kernel.org/6.17.8-728-ASoC-meson-aiu-encoder-i2s-fix-bit-clock-polar.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
