--- a/series.conf
+++ b/series.conf
@@ -1763,6 +1763,7 @@
 	patches.kernel.org/6.17.8-375-drm-amd-display-wait-for-otg-update-pending-la.patch
 	patches.kernel.org/6.17.8-376-drm-amd-display-Consider-sink-max-slice-width-.patch
 	patches.kernel.org/6.17.8-377-drm-amdgpu-vpe-cancel-delayed-work-in-hw_fini.patch
+	patches.kernel.org/6.17.8-378-drm-xe-Cancel-pending-TLB-inval-workers-on-tea.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
