s390: Disable ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMAP (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1481,6 +1481,7 @@
 	patches.kernel.org/6.17.8-093-regmap-slimbus-fix-bus_context-pointer-in-regm.patch
 	patches.kernel.org/6.17.8-094-regmap-irq-Correct-documentation-of-wake_inver.patch
 	patches.kernel.org/6.17.8-095-s390-pci-Avoid-deadlock-between-PCI-error-reco.patch
+	patches.kernel.org/6.17.8-096-s390-Disable-ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMA.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
