--- a/series.conf
+++ b/series.conf
@@ -1637,6 +1637,7 @@
 	patches.kernel.org/6.17.8-249-drm-xe-Extend-wa_13012615864-to-additional-Xe2.patch
 	patches.kernel.org/6.17.8-250-drm-amdgpu-Skip-poison-aca-bank-from-UE-channe.patch
 	patches.kernel.org/6.17.8-251-drm-amd-display-add-more-cyan-skillfish-device.patch
+	patches.kernel.org/6.17.8-252-drm-amdgpu-Initialize-jpeg-v5_0_1-ras-function.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
