drm/amdgpu: Use memdup_array_user in amdgpu_cs_wait_fences_ioctl (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1932,6 +1932,7 @@
 	patches.kernel.org/6.17.8-544-wifi-mt76-mt7996-disable-promiscuous-mode-by-d.patch
 	patches.kernel.org/6.17.8-545-wifi-mt76-use-altx-queue-for-offchannel-tx-on-.patch
 	patches.kernel.org/6.17.8-546-wifi-mt76-improve-phy-reset-on-hw-restart.patch
+	patches.kernel.org/6.17.8-547-drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
