scsi: mpt3sas: Add support for 22.5 Gbps SAS link rate (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2020,6 +2020,7 @@
 	patches.kernel.org/6.17.8-632-scsi-ufs-core-Change-MCQ-interrupt-enable-flow.patch
 	patches.kernel.org/6.17.8-633-scsi-libfc-Fix-potential-buffer-overflow-in-fc.patch
 	patches.kernel.org/6.17.8-634-accel-habanalabs-gaudi2-fix-BMON-disable-confi.patch
+	patches.kernel.org/6.17.8-635-scsi-mpt3sas-Add-support-for-22.5-Gbps-SAS-lin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
