--- a/series.conf
+++ b/series.conf
@@ -2225,6 +2225,7 @@
 	patches.kernel.org/6.17.8-837-ALSA-hda-tas2781-Enable-init_profile_id-for-de.patch
 	patches.kernel.org/6.17.8-838-ACPI-SPCR-Check-for-table-version-when-using-p.patch
 	patches.kernel.org/6.17.8-839-kbuild-Strip-trailing-padding-bytes-from-modul.patch
+	patches.kernel.org/6.17.8-840-drm-amdgpu-Fix-unintended-error-log-in-VCN5_0_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
