drm/amd/pm/powerplay/smumgr: Fix PCIeBootLinkLevel value on Fiji (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1467,6 +1467,7 @@
 	patches.kernel.org/6.17.8-079-drm-radeon-Do-not-kfree-devres-managed-rdev.patch
 	patches.kernel.org/6.17.8-080-drm-radeon-Remove-calls-to-drm_put_dev.patch
 	patches.kernel.org/6.17.8-081-drm-amd-pm-fix-smu-table-id-bound-check-issue-.patch
+	patches.kernel.org/6.17.8-082-drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
