ACPI: scan: Add Intel CVS ACPI HIDs to acpi_ignore_dep_ids[] (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1534,6 +1534,7 @@
 	patches.kernel.org/6.17.8-146-irqchip-gic-v2m-Handle-Multiple-MSI-base-IRQ-A.patch
 	patches.kernel.org/6.17.8-147-ACPI-PRM-Skip-handlers-with-NULL-handler_addre.patch
 	patches.kernel.org/6.17.8-148-ACPI-resource-Skip-IRQ-override-on-ASUS-Vivobo.patch
+	patches.kernel.org/6.17.8-149-ACPI-scan-Add-Intel-CVS-ACPI-HIDs-to-acpi_igno.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
