clk: clocking-wizard: Fix output clock register offset for Versal platforms (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2095,6 +2095,7 @@
 	patches.kernel.org/6.17.8-707-9p-trans_fd-p9_fd_request-kick-rx-thread-if-EP.patch
 	patches.kernel.org/6.17.8-708-clk-ti-am33xx-keep-WKUP_DEBUGSS_CLKCTRL-enable.patch
 	patches.kernel.org/6.17.8-709-clk-scmi-Add-duty-cycle-ops-only-when-duty-cyc.patch
+	patches.kernel.org/6.17.8-710-clk-clocking-wizard-Fix-output-clock-register-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
