tools: ynl: avoid print_field when there is no reply (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1460,6 +1460,7 @@
 	patches.kernel.org/6.17.8-072-tools-ynl-fix-string-attribute-length-to-inclu.patch
 	patches.kernel.org/6.17.8-073-net-hns3-return-error-code-when-function-fails.patch
 	patches.kernel.org/6.17.8-074-sfc-fix-potential-memory-leak-in-efx_mae_proce.patch
+	patches.kernel.org/6.17.8-075-tools-ynl-avoid-print_field-when-there-is-no-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
