vfio: return -ENOTTY for unsupported device feature (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1992,6 +1992,7 @@
 	patches.kernel.org/6.17.8-604-PCI-cadence-Check-for-the-existence-of-cdns_pc.patch
 	patches.kernel.org/6.17.8-605-sparc-module-Add-R_SPARC_UA64-relocation-handl.patch
 	patches.kernel.org/6.17.8-606-sparc64-fix-prototypes-of-reads-bwl.patch
+	patches.kernel.org/6.17.8-607-vfio-return-ENOTTY-for-unsupported-device-feat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
