drm/amdgpu: fix SPDX header on amd_cper.h (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1470,6 +1470,7 @@
 	patches.kernel.org/6.17.8-082-drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLe.patch
 	patches.kernel.org/6.17.8-083-drm-amd-pm-powerplay-smumgr-Fix-PCIeBootLinkLe.patch
 	patches.kernel.org/6.17.8-084-drm-amdgpu-fix-SPDX-headers-on-amdgpu_cper.c-h.patch
+	patches.kernel.org/6.17.8-085-drm-amdgpu-fix-SPDX-header-on-amd_cper.h.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
