Bluetooth: bcsp: receive data only if registered (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2051,6 +2051,7 @@
 	patches.kernel.org/6.17.8-663-Bluetooth-ISO-Use-sk_sndtimeo-as-conn_timeout.patch
 	patches.kernel.org/6.17.8-664-Bluetooth-SCO-Fix-UAF-on-sco_conn_free.patch
 	patches.kernel.org/6.17.8-665-Bluetooth-btusb-Add-new-VID-PID-13d3-3633-for-.patch
+	patches.kernel.org/6.17.8-666-Bluetooth-bcsp-receive-data-only-if-registered.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
