fbdev: Add bounds checking in bit_putcs to fix vmalloc-out-of-bounds (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2107,6 +2107,7 @@
 	patches.kernel.org/6.17.8-719-tools-bitmap-Add-missing-asm-generic-bitsperlo.patch
 	patches.kernel.org/6.17.8-720-tools-lib-thermal-don-t-preserve-owner-in-inst.patch
 	patches.kernel.org/6.17.8-721-tools-lib-thermal-use-pkg-config-to-locate-lib.patch
+	patches.kernel.org/6.17.8-722-fbdev-Add-bounds-checking-in-bit_putcs-to-fix-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
