drm/xe/ptl: Apply Wa_16026007364 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1613,6 +1613,7 @@
 	patches.kernel.org/6.17.8-225-mfd-core-Increment-of_node-s-refcount-before-l.patch
 	patches.kernel.org/6.17.8-226-mfd-cs42l43-Move-IRQ-enable-disable-to-encompa.patch
 	patches.kernel.org/6.17.8-227-mfd-intel-lpss-Add-Intel-Wildcat-Lake-LPSS-PCI.patch
+	patches.kernel.org/6.17.8-228-drm-xe-ptl-Apply-Wa_16026007364.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
