drm/amd/display: Fix NULL deref in debugfs odm_combine_segments (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2210,6 +2210,7 @@
 	patches.kernel.org/6.17.8-822-drm-define-NVIDIA-DRM-format-modifiers-for-GB2.patch
 	patches.kernel.org/6.17.8-823-drm-nouveau-Advertise-correct-modifiers-on-GB2.patch
 	patches.kernel.org/6.17.8-824-drm-amdgpu-smu-Handle-S0ix-for-vangogh.patch
+	patches.kernel.org/6.17.8-825-drm-amd-display-Fix-NULL-deref-in-debugfs-odm_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
