selftests/bpf: Fix flaky bpf_cookie selftest (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1597,6 +1597,7 @@
 	patches.kernel.org/6.17.8-209-hwmon-dell-smm-Remove-Dell-Precision-490-custo.patch
 	patches.kernel.org/6.17.8-210-hwmon-dell-smm-Add-support-for-Dell-OptiPlex-7.patch
 	patches.kernel.org/6.17.8-211-tools-cpupower-Fix-incorrect-size-in-cpuidle_s.patch
+	patches.kernel.org/6.17.8-212-selftests-bpf-Fix-flaky-bpf_cookie-selftest.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
