scsi: ufs: host: mediatek: Disable auto-hibern8 during power mode changes (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1882,6 +1882,7 @@
 	patches.kernel.org/6.17.8-494-scsi-ufs-host-mediatek-Enhance-recovery-on-hib.patch
 	patches.kernel.org/6.17.8-495-net-phy-marvell-Fix-88e1510-downshift-counter-.patch
 	patches.kernel.org/6.17.8-496-scsi-ufs-host-mediatek-Correct-system-PM-flow.patch
+	patches.kernel.org/6.17.8-497-scsi-ufs-host-mediatek-Disable-auto-hibern8-du.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
