net: usb: qmi_wwan: initialize MAC header offset in qmimux_rx_fixup (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2164,6 +2164,7 @@
 	patches.kernel.org/6.17.8-776-net-ionic-add-dma_wmb-before-ringing-TX-doorbe.patch
 	patches.kernel.org/6.17.8-777-net-ionic-map-SKB-after-pseudo-header-checksum.patch
 	patches.kernel.org/6.17.8-778-octeontx2-pf-Fix-devm_kcalloc-error-checking.patch
+	patches.kernel.org/6.17.8-779-net-usb-qmi_wwan-initialize-MAC-header-offset-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
