drm/msm: Fix 32b size truncation (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1854,6 +1854,7 @@
 	patches.kernel.org/6.17.8-466-tty-vt-Add-missing-return-value-for-VT_RESIZE-.patch
 	patches.kernel.org/6.17.8-467-eeprom-at25-support-Cypress-FRAMs-without-devi.patch
 	patches.kernel.org/6.17.8-468-drm-msm-adreno-Add-speedbins-for-A663-GPU.patch
+	patches.kernel.org/6.17.8-469-drm-msm-Fix-32b-size-truncation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
