ASoC: renesas: msiof: use reset controller (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2025,6 +2025,7 @@
 	patches.kernel.org/6.17.8-637-accel-habanalabs-gaudi2-read-preboot-status-af.patch
 	patches.kernel.org/6.17.8-638-accel-habanalabs-support-mapping-cb-with-vmall.patch
 	patches.kernel.org/6.17.8-639-ASoC-renesas-msiof-add-.symmetric_xxx-on-snd_s.patch
+	patches.kernel.org/6.17.8-640-ASoC-renesas-msiof-use-reset-controller.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
