bus: mhi: host: pci_generic: Add support for all Foxconn T99W696 SKU variants (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1836,6 +1836,7 @@
 	patches.kernel.org/6.17.8-448-iommu-amd-Reuse-device-table-for-kdump.patch
 	patches.kernel.org/6.17.8-449-crypto-ccp-Skip-SEV-and-SNP-INIT-for-kdump-boo.patch
 	patches.kernel.org/6.17.8-450-iommu-apple-dart-Clear-stream-error-indicator-.patch
+	patches.kernel.org/6.17.8-451-bus-mhi-host-pci_generic-Add-support-for-all-F.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
