ntfs3: pretend $Extend records as regular files (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1884,6 +1884,7 @@
 	patches.kernel.org/6.17.8-496-scsi-ufs-host-mediatek-Correct-system-PM-flow.patch
 	patches.kernel.org/6.17.8-497-scsi-ufs-host-mediatek-Disable-auto-hibern8-du.patch
 	patches.kernel.org/6.17.8-498-scsi-ufs-host-mediatek-Fix-adapt-issue-after-P.patch
+	patches.kernel.org/6.17.8-499-ntfs3-pretend-Extend-records-as-regular-files.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
