selftests/net: Ensure assert() triggers in psock_tpacket.c (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1659,6 +1659,7 @@
 	patches.kernel.org/6.17.8-271-drm-nouveau-always-set-RMDevidCheckIgnore-for-.patch
 	patches.kernel.org/6.17.8-272-drm-panel-edp-Add-SHP-LQ134Z1-panel-for-Dell-X.patch
 	patches.kernel.org/6.17.8-273-selftests-net-Replace-non-standard-__WORDSIZE-.patch
+	patches.kernel.org/6.17.8-274-selftests-net-Ensure-assert-triggers-in-psock_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
