f2fs: fix wrong layout information on 16KB page (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1873,6 +1873,7 @@
 	patches.kernel.org/6.17.8-485-media-qcom-camss-csiphy-3ph-Add-CSIPHY-2ph-DPH.patch
 	patches.kernel.org/6.17.8-486-drm-bridge-write-full-Audio-InfoFrame.patch
 	patches.kernel.org/6.17.8-487-drm-xe-guc-Always-add-CT-disable-action-during.patch
+	patches.kernel.org/6.17.8-488-f2fs-fix-wrong-layout-information-on-16KB-page.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
