Revert "NFSD: Remove the cap on number of operations per NFSv4 COMPOUND" (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1390,6 +1390,7 @@
 	patches.kernel.org/6.17.8-002-sched_ext-Mark-scx_bpf_dsq_move_set_-slice-vti.patch
 	patches.kernel.org/6.17.8-003-NFSD-Define-actions-for-the-new-time_deleg-FAT.patch
 	patches.kernel.org/6.17.8-004-NFSD-Fix-crash-in-nfsd4_read_release.patch
+	patches.kernel.org/6.17.8-005-Revert-NFSD-Remove-the-cap-on-number-of-operat.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
