hwmon: (sbtsi_temp) AMD CPU extended temperature range support (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1541,6 +1541,7 @@
 	patches.kernel.org/6.17.8-153-hwmon-k10temp-Add-thermal-support-for-AMD-Fami.patch
 	patches.kernel.org/6.17.8-154-hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
 	patches.kernel.org/6.17.8-155-hwmon-lenovo-ec-sensors-Update-P8-supprt.patch
+	patches.kernel.org/6.17.8-156-hwmon-sbtsi_temp-AMD-CPU-extended-temperature-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
