drm/msm/dpu: Fix adjusted mode clock check for 3d merge (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2229,6 +2229,7 @@
 	patches.kernel.org/6.17.8-841-drm-amd-display-Fix-vupdate_offload_work-doc.patch
 	patches.kernel.org/6.17.8-842-drm-amdgpu-Fix-function-header-names-in-amdgpu.patch
 	patches.kernel.org/6.17.8-843-drm-amdgpu-userq-assign-an-error-code-for-inva.patch
+	patches.kernel.org/6.17.8-844-drm-msm-dpu-Fix-adjusted-mode-clock-check-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
