drm/amdgpu: Notify pmfw bad page threshold exceeded (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1774,6 +1774,7 @@
 	patches.kernel.org/6.17.8-386-media-fix-uninitialized-symbol-warnings.patch
 	patches.kernel.org/6.17.8-387-media-pci-mgb4-Fix-timings-comparison-in-VIDIO.patch
 	patches.kernel.org/6.17.8-388-ASoC-SOF-ipc4-pcm-Add-fixup-for-channels.patch
+	patches.kernel.org/6.17.8-389-drm-amdgpu-Notify-pmfw-bad-page-threshold-exce.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
