net: phy: mscc: report and configure in-band auto-negotiation for SGMII/QSGMII (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1686,6 +1686,7 @@
 	patches.kernel.org/6.17.8-298-s390-pci-Use-pci_uevent_ers-in-PCI-recovery.patch
 	patches.kernel.org/6.17.8-299-bridge-Redirect-to-backup-port-when-port-is-ad.patch
 	patches.kernel.org/6.17.8-300-selftests-drv-net-wait-for-carrier.patch
+	patches.kernel.org/6.17.8-301-net-phy-mscc-report-and-configure-in-band-auto.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
