media: pci: mgb4: Fix timings comparison in VIDIOC_S_DV_TIMINGS (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1772,6 +1772,7 @@
 	patches.kernel.org/6.17.8-384-drm-msm-Use-of_reserved_mem_region_to_resource.patch
 	patches.kernel.org/6.17.8-385-selftests-drv-net-rss_ctx-fix-the-queue-count-.patch
 	patches.kernel.org/6.17.8-386-media-fix-uninitialized-symbol-warnings.patch
+	patches.kernel.org/6.17.8-387-media-pci-mgb4-Fix-timings-comparison-in-VIDIO.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
