drm/amdgpu: reject gang submissions under SRIOV (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1953,6 +1953,7 @@
 	patches.kernel.org/6.17.8-565-hinic3-Fix-missing-napi-dev-in-netif_queue_set.patch
 	patches.kernel.org/6.17.8-566-tools-ynl-gen-validate-nested-arrays.patch
 	patches.kernel.org/6.17.8-567-drm-xe-guc-Return-an-error-code-if-the-GuC-loa.patch
+	patches.kernel.org/6.17.8-568-drm-amdgpu-reject-gang-submissions-under-SRIOV.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
