net: dsa: b53: stop reading ARL entries if search is done (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2156,6 +2156,7 @@
 	patches.kernel.org/6.17.8-768-net-dsa-b53-fix-resetting-speed-and-pause-on-f.patch
 	patches.kernel.org/6.17.8-769-net-dsa-b53-fix-bcm63xx-RGMII-port-link-adjust.patch
 	patches.kernel.org/6.17.8-770-net-dsa-b53-fix-enabling-ip-multicast.patch
+	patches.kernel.org/6.17.8-771-net-dsa-b53-stop-reading-ARL-entries-if-search.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
