drm/radeon: Do not kfree() devres managed rdev (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1464,6 +1464,7 @@
 	patches.kernel.org/6.17.8-076-dpll-spec-add-missing-module-name-and-clock-id.patch
 	patches.kernel.org/6.17.8-077-ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
 	patches.kernel.org/6.17.8-078-ASoC-soc_sdw_utils-remove-cs42l43-component_na.patch
+	patches.kernel.org/6.17.8-079-drm-radeon-Do-not-kfree-devres-managed-rdev.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
